task based implementation of the storage service